--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
                           src="./assets/img/comentarios/m1.jpeg"></td>
                       <td>
                         <font class="fb-comments-comment-name">
-                          <name>Daniela Alves</name>
+                          <name>Josiane Moraes</name>
                         </font>
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Já tentei fazer varias dietas... Cetogenicas low carb, shackes. Mas nada resolvel perdia alguns quilos e depois retornava tudo, fazendo esse método hotslim mantendo a temperatura do corpo constante estou perdendo em média 2 kg por semana</td>
+                      <td class="fb-comments-comment-text">Felicidade me defineeee!!! Gentee, eu acha que não daria certo para mim. Mas em apenas um mês aplicando já obtive resultados no meu bumbum, amanduuu!!!</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -87,12 +87,12 @@
                           src="./assets/img/comentarios/m2.jpeg"></td>
                       <td>
                         <font class="fb-comments-comment-name">
-                          <name>Pollyana Pereira</name>
+                          <name>Jasmine Silveira</name>
                         </font>
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">É incrível, já perdi 6kg nos primeiros 15 dias, usando essa estratégia</td>
+                      <td class="fb-comments-comment-text">Realmente dá resultado, vai fazer dois meses que sigo o programa sem parar! Consegui durante esse tempo me livrar da celulite e o melhor de tudo é que não preciso ficar fazendo aquelas dietas loucas da internet</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -121,7 +121,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Na minha primeira semana dentro do programa consegui perder 3 kg. Estou muito Feliz</td>
+                      <td class="fb-comments-comment-text">Meninas, a dica do final do video compensa demais!!! Estou amandando!!</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -145,12 +145,12 @@
                           src="./assets/img/comentarios/m4.jpeg"></td>
                       <td>
                         <font class="fb-comments-comment-name">
-                          <name>Rosangela de Castro</name>
+                          <name>Márcia Santos</name>
                         </font>
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Esse programa é fantastico, em 2 semanas seguindo a risca consegui voltar a usar minhas roupas que usava a uns 2 anos atrás</td>
+                      <td class="fb-comments-comment-text">Meninas eu tenho 44 anos e tô de cara com esses segredos, já faz duas semanas que estou seguindo esse programa e estou amando os resultados. A celulite desaparece mesmo e olha que eu já tento me livrar dela a anos e nunca senti tantos resultados como agora! Super recomendo</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -174,12 +174,12 @@
                           src="./assets/img/comentarios/m5.jpeg"></td>
                       <td>
                         <font class="fb-comments-comment-name">
-                          <name>Paula Lopes</name>
+                          <name>Camila Esteves</name>
                         </font>
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">É muito bom poder voltar a usar as roupas que antes não serviam mais em mim</td>
+                      <td class="fb-comments-comment-text">Você me economizou um baita tempo e dinheiro com esses segredos que me revelou menina, só tenho a te agradecer.</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -203,12 +203,12 @@
                           src="./assets/img/comentarios/m6.jpeg"></td>
                       <td>
                         <font class="fb-comments-comment-name">
-                          <name>Roberta Gomes</name>
+                          <name>Cleusa Aguiar</name>
                         </font>
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Confesso que não esperava muito, mas realmente funciona bastante já se foram 2,5kg na primeira semana</td>
+                      <td class="fb-comments-comment-text">Tô de cara com esse guia! Não sabia que realmente ia funcionar, tô naqueles 13 dias que vc falou e adivinha.. Já estou com as pernas lisinhas</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -233,12 +233,12 @@
                       </td>
                       <td>
                         <font class="fb-comments-comment-name">
-                          <name>Andressa De Souza</name>
+                          <name>Raquel Souza</name>
                         </font>
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Estou a um mês fazendo o programa e o jeito que a minha vida mudou depois de perder 15kg. Hoje em dia ando na rua as pessoas olham para mim, meu marido ficou mais potente na cama, nossa relação melhorou muito. Obrigada por mudarem minha vida.</td>
+                      <td class="fb-comments-comment-text">Nossa faz uma semana q to fazendo a rotina e ja consigo ver resultados !! Melhor que mta massagem e creme 🙂</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
