--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
      <div class="col-lg-8 text-center">
           
              <!-- Headline -->
-            <h4 class="my-4"><b>Essa Erva Irlandesa Pode Suavizar As Celulites Em Apenas 21 Dias</b></h4> 
+            <h4 class="my-4"><b>Essa Segredo Irlandes Me Fez Eliminar as Celulites Em 21 Dias</b></h4> 
 
             <!-- VSL -->
        <div id="vid_64076496ed1fd70008ff8f4a" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_64076496ed1fd70008ff8f4a" src="https://images.converteai.net/f04ad2cb-4155-4178-8d31-7f3c8861e570/players/64076496ed1fd70008ff8f4a/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_64076496ed1fd70008ff8f4a" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_64076496ed1fd70008ff8f4a">var s=document.createElement("script");s.src="https://scripts.converteai.net/f04ad2cb-4155-4178-8d31-7f3c8861e570/players/64076496ed1fd70008ff8f4a/player.js",s.async=!0,document.head.appendChild(s);</script>
