--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
  <h6 class="my-4"><b>🔊 Verifique Se o Som Está Ligado</b></h6>
        
         <!-- Botão 1 -->   
+       <div id="cta1" class="mt-4 d-none">
        <div style="text-align:center">
           <button id="kiwify-upsell-trigger-AKAPFgn" style="background-color:#27AF60;padding:12px 16px;cursor:pointer;color:#FFFFFF;font-weight:600;border-radius:4px;border:1px solid #27AF60;font-size:20px;">Sim, Eu Quero Eliminar as Celulites</button>
           <div id="kiwify-upsell-cancel-trigger" style="margin-top:1rem;cursor:pointer;font-size:16px;text-decoration:underline;font-family:sans-serif;">Não, vou viver com minhas celulites</div>
